refactor: validate existence of ISO volume
Validate existence of the ISO volume
instead of creating a new one and
importing it from the remote server.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -2,15 +2,13 @@
 
 - `kube_config` (string) - Kube Config
 
-- `iso_url` (string) - Iso Url
-
-- `iso_size` (string) - Iso Size
-
-- `disk_size` (string) - Disk Size
-
 - `name` (string) - Name
 
 - `namespace` (string) - Namespace
+
+- `iso_volume_name` (string) - Iso Volume Name
+
+- `disk_size` (string) - Disk Size
 
 - `instance_type` (string) - Instance Type
 
