feat: implement a new boot command step
This new step allows the user to send
keystrokes over VNC connection to the
VM in order to simulate interaction,
e.g. can be used to inject kickstart
configuration.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -14,4 +14,8 @@
 
 - `preference` (string) - Preference
 
+- `boot_command` ([]string) - Boot Command
+
+- `boot_wait` (duration string | ex: "1h5m2s") - Boot Wait
+
 <!-- End of code generated from the comments of the Config struct in builder/kubevirt/iso/config.go; -->
