feat: provision VM via SSH communicator
Establish SSH connection to the temporary
VM after ISO installation to provision the
VM from Packer's host with relevant custom
scripts.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -18,4 +18,12 @@
 
 - `boot_wait` (duration string | ex: "1h5m2s") - Boot Wait
 
+- `communicator` (string) - Communicator
+
+- `ssh_username` (string) - SSH Username
+
+- `ssh_password` (string) - SSH Password
+
+- `ssh_wait_timeout` (duration string | ex: "1h5m2s") - SSH Wait Timeout
+
 <!-- End of code generated from the comments of the Config struct in builder/kubevirt/iso/config.go; -->
