fix: wait for ISO installation completion
Wait for ISO installation to be completed
before trying to establish SSH connection.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -18,6 +18,8 @@
 
 - `boot_wait` (duration string | ex: "1h5m2s") - Boot Wait
 
+- `installation_wait_timeout` (duration string | ex: "1h5m2s") - Installation Wait Timeout
+
 - `communicator` (string) - Communicator
 
 - `ssh_username` (string) - SSH Username
