feat: implement step to store media files
Add a new step to create and store
media files provided by the user.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -14,6 +14,8 @@
 
 - `preference` (string) - Preference
 
+- `media_files` ([]string) - Media Files
+
 - `boot_command` ([]string) - Boot Command
 
 - `boot_wait` (duration string | ex: "1h5m2s") - Boot Wait
