fix: set bus type from VM preference
Currently the temporary VM is created with
hardcoded value of bus type, which is virtio,
and is not configurable.

This modification will allow to set the VM's
bus type from the VM preference, and
also an option to choose which kind of the
instance type or preference to use, either
namespaced one or from the cluster.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -12,7 +12,11 @@
 
 - `instance_type` (string) - Instance Type
 
+- `instance_type_kind` (string) - Instance Type Kind
+
 - `preference` (string) - Preference
+
+- `preference_kind` (string) - Preference Kind
 
 - `media_files` ([]string) - Media Files
 
