feat: add example of Windows template
Example of how to create and configure
Windows template.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -18,6 +18,8 @@
 
 - `preference_kind` (string) - Preference Kind
 
+- `os_type` (string) - Operating System Type
+
 - `media_files` ([]string) - Media Files
 
 - `boot_command` ([]string) - Boot Command
