feat: provision VM via WinRM communicator
Usage of WinRM communicator to provision
VM, and get rid of hardcoded port-forwarding
ports.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -30,10 +30,28 @@
 
 - `communicator` (string) - Communicator
 
+- `ssh_host` (string) - SSH Host
+
+- `ssh_local_port` (string) - SSH Local Port
+
+- `ssh_remote_port` (string) - SSH Remote Port
+
 - `ssh_username` (string) - SSH Username
 
 - `ssh_password` (string) - SSH Password
 
 - `ssh_wait_timeout` (duration string | ex: "1h5m2s") - SSH Wait Timeout
+
+- `winrm_host` (string) - Win RM Host
+
+- `winrm_local_port` (string) - Win RM Local Port
+
+- `winrm_remote_port` (string) - Win RM Remote Port
+
+- `winrm_username` (string) - Win RM Username
+
+- `winrm_password` (string) - Win RM Password
+
+- `winrm_wait_timeout` (duration string | ex: "1h5m2s") - Win RM Wait Timeout
 
 <!-- End of code generated from the comments of the Config struct in builder/kubevirt/iso/config.go; -->
