feat: configure VM networks
An option to configure the default network and
additionally the secondary network if needed.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -20,6 +20,8 @@
 
 - `os_type` (string) - Operating System Type
 
+- `networks` ([]Network) - Networks
+
 - `media_files` ([]string) - Media Files
 
 - `boot_command` ([]string) - Boot Command
@@ -32,9 +34,9 @@
 
 - `ssh_host` (string) - SSH Host
 
-- `ssh_local_port` (string) - SSH Local Port
+- `ssh_local_port` (int) - SSH Local Port
 
-- `ssh_remote_port` (string) - SSH Remote Port
+- `ssh_remote_port` (int) - SSH Remote Port
 
 - `ssh_username` (string) - SSH Username
 
@@ -44,9 +46,9 @@
 
 - `winrm_host` (string) - Win RM Host
 
-- `winrm_local_port` (string) - Win RM Local Port
+- `winrm_local_port` (int) - Win RM Local Port
 
-- `winrm_remote_port` (string) - Win RM Remote Port
+- `winrm_remote_port` (int) - Win RM Remote Port
 
 - `winrm_username` (string) - Win RM Username
 
