feat: option to keep VM after build
Allow keeping the temporary VM after a build,
enabling users to perform validation, debugging,
or manual enhancements.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
+++ b/docs-partials/builder/kubevirt/iso/Config-not-required.mdx
@@ -56,4 +56,6 @@
 
 - `winrm_wait_timeout` (duration string | ex: "1h5m2s") - Win RM Wait Timeout
 
+- `keep_vm` (bool) - Keep the temporary VM after the build
+
 <!-- End of code generated from the comments of the Config struct in builder/kubevirt/iso/config.go; -->
